MCKIN-11472 - fixed the horizontal scrollbar for poll and survey. (#185)
* MCKIN-11472 - fixed the horizontal scrollbar for poll and survey.

--- a/lms/static/sass/xblocks/poll_survey.scss
+++ b/lms/static/sass/xblocks/poll_survey.scss
@@ -356,6 +356,7 @@ body.new-theme {
                     .visible-mobile-only {
                         text-align: right;
                         right: 44px;
+                        
                     }
                 }
 
@@ -363,7 +364,9 @@ body.new-theme {
                 // for mobile only.
 
                 @media (max-width: 767px) {
-
+                    .visible-mobile-only {
+                        width: calc(100% - 50px);
+                    }
                     tr,
                     .survey-row {
 
@@ -382,8 +385,6 @@ body.new-theme {
                     }
                 }               
             }
-
-            
         }
 
         .poll-results
